--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,12 +4,12 @@
 }
 
 .form_wrap{
-    width: 1050px;
-    height: 530px;
+    width: 100%;
+    height: 700px;
     margin: 50px auto;
     display: flex;
 
-    background: #fff;
+    background: white;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -18,22 +18,19 @@
 /* Informacion de Contacto*/
 
 .contact_info::before{
-    content: '';
+ /*    content: ''; */
     width: 100%;
     height: 100%;
 
     position: absolute;
     top: 0;
     left: 0;
-
-    background: #4091EC;
     opacity: 0.9;
 }
 
 .contact_info{
-    width: 35%;
+    width: 50%;
     position: relative;
-    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,12 +46,11 @@
     color: #fff;
 }
 
-.info_title{
-    margin-bottom: 20px;
-}
+
 .ubicacion{
     border-radius: 10px;
     width: 100%;
+    height: 30vw;
 }
 .texto{
     font-size: 35px;
@@ -87,16 +83,30 @@
 
 
 /* Formulario de contacto*/
+
+::placeholder {
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+textarea{
+    font-size: 20px;
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 form.form_contact{
     width: 62%;
-    padding: 30px 40px;
+    margin-top: 78px;
+    padding: 20px;
+
 }
 
 form.form_contact h2{
 	font-size: 25px;
 	font-weight: 600;
-	color: #303030;
-	margin-bottom: 30px;
+    color: #303030;
+    margin-top: 40px;
+	margin-bottom: 10px;
 }
 
 form.form_contact .user_info{
@@ -268,4 +278,106 @@ form.form_contact input[type="submit"]:hover{
 
 .mensaje-exito a:hover{
     background: #3371B6;
+}
+
+.contenedor-clientes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin:auto;
+}
+.cliente-logo-img{
+    width: 140px;
+    height: 100px;
+     object-fit:contain;
+}
+
+.video{
+    width: 100%;
+    height: 42vw;
+    object-fit: fill;
+}
+
+.quienesSomos-img{
+  width: 356px;
+  height: 280px;
+}
+
+.quienesSomos-contenedor{
+ display: flex;
+ justify-content: space-between;
+ flex-wrap: wrap;
+}
+
+.qS-item{
+    padding: 20px;
+    width: 300px;
+    margin: 2px;
+    background: #4363ce;
+    color: white;
+}
+.qS-item-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+[qs-item2]{
+   background-color: white;
+}
+
+.nuestrosServicios-item{
+  width: 328px;
+  text-align: center;
+  margin:7px;
+}
+.nuestrosServicios-item-img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+[NS-1]{
+    color:white;
+    height: 70px;
+    padding: 10px;
+}
+/* estilso cajas de contactanos */
+.contactos-intesla-contenedor{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    flex-wrap: wrap;
+    
+}
+.contenedor-contactanos{
+    display: flex;
+    width: 80%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+   
+   
+}
+
+.contenedor-contactanos-item{
+    color: white;
+    margin: auto;
+    width: 270px;
+    text-align: center;
+}
+
+/* QUIENES SOMOS */
+
+.subrayado{
+    width: 70px;
+    margin-left: 0px;
+    border: 2px solid rgb(8, 99, 218);
+}
+.direnciamos-item{
+    margin-bottom: 5px;
+    width: 300px;
+}
+.icono-diferenciamos{
+   display: flex;
+   justify-content: center;
 }
