--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,12 @@
+/* CABECERA */
+body{
+ padding-top: 7em;
+}
+.cabecera1{
+    position:fixed;
+   width: 100vw;
+   top: 0;
+}
 [atribute]:hover{
     background-color: #272828;
     border-radius:5px;
@@ -291,8 +300,12 @@ form.form_contact input[type="submit"]:hover{
     height: 100px;
      object-fit:contain;
 }
+.contenedor-video{
+    position: static;
+}
 
 .video{
+   
     width: 100%;
     height: 42vw;
     object-fit: fill;
