--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,34 @@
 body{
  padding-top: 7.5em;
 }
+
+/* CODIGO CARRUSEL DE IMG */
+.carousel-inner img {
+    width: 100%;
+    
+  }
+  .contenedor-header{
+     
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      justify-content: center;
+      padding: 10px;
+    
+  }
+  [li-header]{
+      width: 300px;
+  }
+  .header-informacion{
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .header-redesSociales{
+
+    display: flex;
+  }
+
 .cabecera1{
     position:fixed;
    width: 100vw;
@@ -241,25 +269,39 @@ form.form_contact input[type="submit"]:hover{
 }
 
 /* Portrait tablet to landscape and desktop */
-@media (min-width: 768px) and (max-width: 979px) { 
+@media (min-width: 1020px) and (max-width: 1200px) { 
     .form_wrap{
         width: 90%;
     } 
 }
 
 /* Landscape phone to portrait tablet */
-@media (max-width: 767px) {
+/* CAMBIOS EN EL CUADRO DE FORMULARIOS - CONTACTANOS */
+@media (min-width:480px) and (max-width: 1020px) {
     .form_wrap{
+        display: block ; 
+        width: 90% ;
+        max-width: 100% ;
+        margin: auto;
+        position: static ;
+        float: none ;
+        height: 90%;
+        border: 20px;
+    } 
+    .contact_info{
+        margin-top: 10%;
+        margin-left: 12%;
+        height: 200px;
         width: 80%;
-    } 
+    }
+    .form_contact{
+        float: left; 
+        width: 35%;
+        height: 600px;
+        margin-left: 20%;
+    }
  }
-
-/* Landscape phones and down */
-@media (max-width: 480px) {
-    .form_wrap{
-        width: 90%;
-    } 
- }
+ /* FIN DE LOS CAMBIOS  */
 
 /* MENSAJE EXITOSO*/
 
@@ -396,6 +438,37 @@ form.form_contact input[type="submit"]:hover{
    justify-content: center;
 }
 
+/* */
 .navbar-brand{
-    width: 380px;
+    width: 250px;
+}
+
+/* */
+.cliente-logo-img{
+    width:200px ;
+    margin: 20px;
+}
+
+.clie{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    flex-wrap: wrap;
+
+   
+}
+
+/* */
+.direnciamos-item{
+    margin: 15px;
+    background-color:slategrey;
+    border-radius: 27px;
+    border-style: ridge;
+}
+
+.logi{
+    width: 300px;
+    margin: 30px;
+    margin-left: 0;
+    padding: 0;
 }
