--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,38 +1,43 @@
 /* CABECERA */
-body{
- padding-top: 7.5em;
-}
+
 
 /* CODIGO CARRUSEL DE IMG */
 .carousel-inner img {
-    width: 100%;
-    
+    width: 100vw;
+    height: 30rem;
   }
-  .contenedor-header{
-     
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      justify-content: center;
-      padding: 10px;
-    
-  }
-  [li-header]{
-      width: 300px;
+  .contenedor-nav-1{
+     width: 100%;
+     display: flex;
+     flex-wrap: wrap;
+
+     padding: 5px;
+     justify-content: center;
+ 
   }
   .header-informacion{
-    display: flex; 
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  
+    padding-left: 20px;
   }
   .header-redesSociales{
-
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+
+  }
+  .header-redesSociales i{
+      color:white;
   }
 
+ 
+  
+
 .cabecera1{
-    position:fixed;
-   width: 100vw;
+   
    top: 0;
    /* CODIGO CAMBIADO PARA QUE EL MAPA IFRAME NO SE MUEVA */
    z-index: 3;
@@ -354,33 +359,48 @@ form.form_contact input[type="submit"]:hover{
     object-fit: fill;
 }
 
-.quienesSomos-img{
-  width: 356px;
-  height: 280px;
-}
-
 .quienesSomos-contenedor{
  display: flex;
- justify-content: space-between;
  flex-wrap: wrap;
+ justify-content: center;
 }
 
 .qS-item{
-    padding: 20px;
-    width: 300px;
-    margin: 2px;
-    background: #4363ce;
-    color: white;
-}
-.qS-item-img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 23rem;
+    margin:auto;
 }
 
-[qs-item2]{
-   background-color: white;
+.qS-item:nth-child(2){
+    height: 250px;
 }
+
+.qS-item-div{
+    padding: 20px;
+    margin:20px;
+    border-radius: 10px;
+}
+
+.qS-item-div:nth-child(1){
+    background:  #996699;
+}
+.qS-item-div:nth-child(2){
+    background: #cccccc;
+}
+
+.qS-item-img{
+    width: 320px;
+    height: 300px;
+    margin: auto;
+    border-radius: 15px;
+
+}
+
+.qS-item-div-img{
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .nuestrosServicios-item{
   width: 328px;
@@ -471,4 +491,26 @@ form.form_contact input[type="submit"]:hover{
     margin: 30px;
     margin-left: 0;
     padding: 0;
+}
+
+.nuestros-proyectos h1{
+  text-align: center;
+  margin:20px;
+}
+.nuestros-proyectos-contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.nuestros-proyectos-item{
+    width: 500px;
+    margin:30px;
+}
+.nuestros-proyectos-img{
+    width: 100%;
+}
+
+.subra{
+    border: 3px solid blue;
+    width: 10%;
 }
