Agregando color a tarjetas servicios

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -318,7 +318,7 @@ form.form_contact input[type="submit"]:hover{
  [nav1]{
      background: #01395E;
  }
-[footer]{
+[bg-page]{
     background:#01395E ;
 }
 [bg-whatsapp]{
