--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,15 +2,28 @@
 /* *{
     font-family:Verdana,"Poppins", Helvetica, sans-serif;
 } */
+
 strong{
  font-size: 14px;
  letter-spacing: 1.2px;
  color:rgba(236, 233, 233, 0.918);
 }
+/* LOGO DEL HEADER */
+.header-logo-img{
+    width: 80%;
+}
 /* CODIGO CARRUSEL DE IMG */
 .carousel-inner img {
-    width:100vw;
-    height: 40rem;
+    width:100%;
+    height: 36rem;
+  }
+  #container-QuienesSomos{
+
+      width: 53vw;
+  }
+  .carousel{
+
+   margin: auto;
   }
   .contenedor-nav-1{
      width: 100%;
@@ -342,6 +355,8 @@ form.form_contact input[type="submit"]:hover{
 
 
 .portafolios{
+    width: 90%;
+    margin:auto;
     margin-bottom: 90px;
 }
 /* MENSAJE EXITOSO*/
@@ -382,10 +397,19 @@ form.form_contact input[type="submit"]:hover{
     justify-content: space-around;
     margin:auto;
 }
+.cliente-logo-contenedor{
+    border:1px solid rgb(196, 196, 196);
+    width: 230px;
+    height: 230px;
+    margin-top: 18px;
+    padding-top: 30px;
+    border-radius: 50%;
+    display: flex;
+}
+
 .cliente-logo-img{
-    width: 140px;
-    height: 100px;
-     object-fit:contain;
+    object-fit: contain;
+    height: 120px;
 }
 .contenedor-video{
     position: static;
@@ -405,7 +429,7 @@ form.form_contact input[type="submit"]:hover{
 }
 
 .qS-item{
-    width: 23rem;
+    width: 24rem;
     margin:auto;
 }
 
@@ -420,10 +444,12 @@ form.form_contact input[type="submit"]:hover{
 }
 
 .qS-item-div:nth-child(1){
-    background: #01395E;
+    background: #dbdfe2;
+    color:black;
 }
 .qS-item-div:nth-child(2){
-    background: #01395E;
+    background: #dbdfe2;
+    color:black;
 }
 
 .qS-item-img{
@@ -520,9 +546,9 @@ form.form_contact input[type="submit"]:hover{
 /* */
 .direnciamos-item{
     margin: 15px;
-    background-color:slategrey;
+    border: 1px solid black;
     border-radius: 27px;
-    border-style: ridge;
+    padding: 10px;
 }
 
 .logi{
@@ -554,6 +580,199 @@ form.form_contact input[type="submit"]:hover{
     width: 10%;
 }
 
-h2{
+h2,h1{
     color:rgb(0, 110, 255);
+}
+
+/*ANIMACIONES EN CSS */
+
+/**/
+.qS-item-div{
+    color: seashell;
+    transition: all 400ms ease;
+}
+
+.qS-item-div:hover{
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-6%);
+}
+/* CAJAS ANIMACION */
+.portafolio-articulo{
+    width: 360px;
+    position: relative;
+    height: 300px;
+    overflow: hidden;
+    /* ... */
+    transition: 1s;
+}
+/* Efecto complementario */
+.portafolio-articulo:hover{
+    transform:scale(1.1);
+}
+ /* TEXTO FIJO EN EL VIDEO */
+.contenedor-video{
+    position: relative;
+}
+.titulo-video{
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.titulo-intesla{
+    font-size: 70px;
+    font-weight: 200;
+    z-index: 100;
+    color: white;
+    margin-bottom: 30px;
+    font-family:'Raleway',sans-serif;
+}
+/* *******************************************/
+@media screen and ( max-width: 1200px){
+    .titulo-video{
+        display: inline-block;
+        top: 33%;
+    }
+    .titulo-intesla{
+        font-size: 65px;
+        color: white;
+    }
+}
+
+@media screen and ( max-width: 1020px){
+    .titulo-video{
+        display: inline-block;
+        top: 33%;
+    }
+    .titulo-intesla{
+        font-size: 55px;
+        color: white;
+    }
+}
+
+@media screen and ( max-width: 800px){
+     .titulo-video{
+         display: inline-block;
+         top: 33%;
+     }
+     .titulo-intesla{
+         font-size: 45px;
+         color: white;
+     }
+ }
+
+ @media screen and (max-width:600px){
+    .titulo-video{
+        display: inline-block;
+        top: 33%;
+    }
+     .titulo-intesla{
+         font-size:35px;
+         color:white;
+         z-index: 0;
+     }
+ }
+
+ *{
+    font-family: Arial, Helvetica, sans-serif; }
+
+ /* AGREGANDO ARTICULO 1 VERTICAL INFORMACION */
+ .contenedor-informacion{
+     width: 100%;
+     background:#01395E ;
+     color:white;
+     display:flex;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+     padding:47px;
+     margin-top: 70px;
+ }
+
+ .contenedor-informacion-item:nth-child(4){
+     margin-top: 8px;
+     width: 45%;
+     text-align: center;
+ }
+ .contenedor-informacion-item:nth-child(4) i{
+    margin:5px;
+}
+
+ .contenedor-informacion p {
+    display:inline-block;
+    font-size: 23px;
+    margin-left: 5px;
+ }
+
+ a i{
+     color:White;
+ }
+
+ /* ********************************** VIDEOS*/
+.nuestros-proyectos-contenedor{
+    display:flex;
+    flex-wrap: wrap;
+
+}
+.nomvideo{
+    text-decoration: none !important;
+    font-size: 28px;
+    font-weight: 600;
+    width: 50%;
+    text-align: center;
+    margin-bottom: 5px;
+    color:rgb(0, 110, 255);
+    justify-content: center;
+    font-family:"Segoe UI";
+    background-color:#e0e4e7 ;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    padding: 10px;
+}
+.nomvideo:hover{
+    transform: scale(1.1);
+    transition: all 0.5s ease-out;
+}
+.nuestros-proyectos-item{
+    display:flex;
+    position: relative;
+    width: 100%;
+    margin: 5px;
+    justify-content: center;
+}
+.video-intesla{
+    width: 60%;
+    margin: 0;
+    position: relative;
+    border :2px solid rgb(2, 2, 2);;
+}
+/* ************************************* */
+
+/* CURSO */
+.curso-contenedor{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top:100px;
+    padding:20px;
+}
+.curso-contenedor-item{
+  width: 500px;
+  text-align: center;
+  font-weight: bold;
+}
+.curso-contenedor-item:nth-child(1){
+ 
+}
+.curso-contenedor-item:nth-child(2){
+    
+    background: rgba(0, 148, 247, 0.616);
+    padding: 30px;
+}
+.curso-laptop-img{
+    width: 100%;
+    height: 100%;
+    
 }
