--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,11 +68,6 @@ strong{
 }
 
 .form_wrap{
-    width: 100%;
-    height: 700px;
-    margin: 50px auto;
-    display: flex;
-
     background: white;
     border-radius: 12px;
     overflow: hidden;
@@ -94,23 +89,31 @@ strong{
 /* Estilos del mapa de google(Ubicacion) */
 .contact_info{
     width: 50%;
-    position: relative;;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-size: cover;
+    flex-wrap: wrap;
 }
-.info_items,.info_title{
-    position: relative;
-    z-index: 2;
-    color: #fff;
+.contactanos-item{
+    width: 600px;
+    margin-top: 20px;
+}
+
+
+.contactanos-contenedor
+{
+    padding:70px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin:auto;
 }
 
 .ubicacion{
     border-radius: 10px;
     width: 100%;
-    height: 30vw;
+    height: 50vw;
     position: relative;
     
 }
@@ -158,9 +161,9 @@ textarea{
     font-family: Arial, Helvetica, sans-serif;
 }
 form.form_contact{
-    width: 62%;
-    margin-top: 78px;
+    margin:0px;
     padding: 20px;
+    width: 100%;
 }
 
 form.form_contact h2{
@@ -496,14 +499,30 @@ form.form_contact input[type="submit"]:hover{
     width: 80%;
     justify-content: space-evenly;
     flex-wrap: wrap;
-   
+    padding-top: 30px;
    
 }
 
 .contenedor-contactanos-item{
     color: white;
     margin: auto;
-    width: 270px;
+    width: 250px;
+    height: 150px;
+    text-align: center;
+}
+.contactanos-item:nth-child(2){
+    background: rgba(255, 166, 0, 0.568);
+}
+
+.contactanos-item h2{
+    width: 100%;
+    text-align: center;
+}
+.contactanos-item h2{
+    width: 100%;
+}
+.boton-enviar{
+    margin-top: 15px;
     text-align: center;
 }
 
@@ -690,10 +709,14 @@ h2,h1{
      padding:47px;
      margin-top: 70px;
  }
+ .contenedor-informacion-item{
+     text-align: center;
+     width: 320px;
+ }
 
  .contenedor-informacion-item:nth-child(4){
      margin-top: 8px;
-     width: 45%;
+     width: 320px;
      text-align: center;
  }
  .contenedor-informacion-item:nth-child(4) i{
@@ -775,4 +798,11 @@ h2,h1{
     width: 100%;
     height: 100%;
     
+}
+/* FOOTER ARREGLANDO */
+@media screen and (max-width:600px){
+    .redesociales{
+        width: 100%;
+        margin-bottom: 25px;
+    }
 }
