--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ section p{
     font-family: 'Open Sans',Arial, sans-serif;
     font-size: 16px;
 }
-.icono2{
+.contenedor-informacion .icono2{
 
     font-size: 23px;
 }
